First round of QA work is completed. The following design changes are implemented: - ObjectView Page Tab hovering; - ObjectView Page Tab header stay fixed when scrolling up; - Log in/out stays behind the fixed header when scrolling; - Home page Banner area layout changed to let serverURL as one line; - Icon buttons have floating description when hovered.
Former-commit-id: 7285cfef20a9c81f7d8c8a161dbd4de232f8a65d

--- a/WebContent/resources/css/librarysetting.css
+++ b/WebContent/resources/css/librarysetting.css
@@ -170,22 +170,6 @@ bottom:50px;
     
 }
 
-.roundbutton {
-    width:36px;
-    height:36px;
-    border-radius: 100%;
-    color:green;
-    background-color:transparent;
-    border:1px solid green;
-    font-size:20px;
-    padding:4px 4px;
- 
-    
-}
-.roundbutton:hover{
-    background-color: lightgreen;
-    
-}
 .greenroundbutton#closebutton, select{
 outline:none;}
 
